# rik

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: rik_feed.ipynb
scripts/: dev_setup.py
